# discord-qdb

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: main.rs  yconfig.rs
src/commands/: commands.rs  meta.rs  mod.rs  testbed.rs
src/config/: yaml.rs
